Login style fixes for safari: subheading wrapping

--- a/src/components/Login/Login.scss
+++ b/src/components/Login/Login.scss
@@ -39,6 +39,8 @@
     font-weight: 400;
     color: white;
     animation: fadein 0.6s;
+    width: 100%;
+    text-align: center;
   }
   .accountCaption {
     color: #ffffff;
